--- a/css/main.css
+++ b/css/main.css
@@ -103,7 +103,7 @@ img {
 	padding-right: 1.33rem;
 }
 
-.boder-none {
+.border-none {
 	border: none;
 }
 
@@ -131,6 +131,10 @@ img {
 	position: relative;
 }
 
+.absolute {
+	position: absolute;
+}
+
 .z-10 {
 	z-index: 10;
 }
@@ -141,4 +145,20 @@ img {
 
 .text-brand-teal {
 	color: #90cac7;
+}
+
+.text-brand-teal-dark {
+	color: #539d98;
+}
+
+.bg-white {
+	background-color: #fff;
+}
+
+.mx-auto {
+	margin-left: auto;
+	margin-right: auto;
+}
+
+@media (min-width: 600px) {
 }
