--- a/css/main.css
+++ b/css/main.css
@@ -1,11 +1,3 @@
-*,
-*::after,
-*::before {
-	box-sizing: border-box;
-	margin: 0;
-	padding: 0;
-}
-
 body {
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
@@ -37,9 +29,9 @@ img {
 	color: #fff;
 }
 
-.flex {
+/* .flex {
 	display: flex;
-}
+} */
 
 /* to align things horizontally */
 .justify-between {
@@ -111,9 +103,9 @@ img {
 	border-radius: 9999px;
 }
 
-.font-bold {
+/* .font-bold {
 	font-weight: bold;
-}
+} */
 
 .uppercase {
 	text-transform: uppercase;
@@ -123,9 +115,9 @@ img {
 	font-size: 14px;
 }
 
-.w-full {
+/* .w-full {
 	width: 100%;
-}
+} */
 
 .relative {
 	position: relative;
@@ -160,12 +152,25 @@ img {
 	margin-right: auto;
 }
 
+.text-16px {
+	font-size: 16px;
+}
+
 .text-36px {
 	font-size: 36px;
 }
 
+/* mobile device font will not extend 640px width */
+/* 640px will be the minimal value from which the mobile desktop viewport will take effect */
+/* this is a good example on how you get different classes at diff
+screen sizes
+ */
 @media (min-width: 640px) {
-	.text-60px {
+	.sm\:text-60px {
 		font-size: 60px;
+	}
+
+	.sm\:text-20px {
+		font-size: 20px;
 	}
 }
